<?xml version="2.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".norm_signup"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.675"
                app:srcCompat="@drawable/ic_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#E4F1F5"
            android:fontFamily="@font/proximanovaextraboldwebfont"

            android:gravity="center"
            android:text="Sign Up"
            android:textColor="#000000"
            android:textSize="39sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="28dp"
                app:srcCompat="@drawable/usericon"
                android:contentDescription="TODO" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:hint="Mobile Number" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="28dp"
                app:srcCompat="@drawable/gmailicon"
                android:contentDescription="TODO" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_mail"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="28dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:autofillHints="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E4F1F5"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup"
            android:layout_width="321dp"
            android:layout_height="40dp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/bord"
            android:fontFamily="@font/proximanovaboldwebfont"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:background="#E4F1F5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanovaregularwebfont"
                android:text="Already have an account?"
                android:textColor="@color/semi_white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sgn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:clickable="true"
                android:fontFamily="@font/proximanovaboldwebfont"
                android:text="Sign In"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.734"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InvalidId" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>